--- a/TODO
+++ b/TODO
@@ -12,9 +12,5 @@
 - polishing, allgemein
 
 - weg finden, die pruefsumme "einfach" zu erzeugen (modifier-klick waere vielleicht gut)
-- gutes error-handling (kein crash bei fehlern in der eingabedatei, leeren feldern, fehlenden mandaten etc)
-
-Bugs in 0.1:
-- beim oeffnen in windows erscheint warnung "von dritten veraendert", waehrend beim oeffnen in os x "ok" erscheint
-- umlautheader gruendlich testen!
-- output genau pruefen!
+  derzeit: ausgabe auf stdout im constructor
++ gutes error-handling (kein crash bei fehlern in der eingabedatei, leeren feldern, fehlenden mandaten etc)
