SKGB-offline: improved error handling. exceptions that occur on the GUI thread on actionPerformed are now reported to the user by means of a JOptionPane dialog
git-svn-id: svn+ssh://cat/usr/local/svnreps/skgb/skgb-offline/trunk@661 31b05262-34a9-4923-903e-e8e313387d9b

--- a/TODO
+++ b/TODO
@@ -13,4 +13,5 @@
 
 - weg finden, die pruefsumme "einfach" zu erzeugen (modifier-klick waere vielleicht gut)
   derzeit: ausgabe auf stdout im constructor
-+ gutes error-handling (kein crash bei fehlern in der eingabedatei, leeren feldern, fehlenden mandaten etc)
+- hilfreichere infos bei fehlern
+- gutes error-handling (möglichkeit, fehler in der eingabedatei, leeren feldern, fehlenden mandaten etc zu überspringen o. ä.?)
