minor code quality improvements
git-svn-id: svn+ssh://cat/usr/local/svnreps/skgb/skgb-offline/trunk@769 31b05262-34a9-4923-903e-e8e313387d9b

--- a/TODO
+++ b/TODO
@@ -15,3 +15,6 @@
   derzeit: ausgabe auf stdout im constructor
 - hilfreichere infos bei fehlern
 - gutes error-handling (möglichkeit, fehler in der eingabedatei, leeren feldern, fehlenden mandaten etc zu überspringen o. ä.?)
+
+KNOWN BUGS:
+- "key doppelt vorhanden", wenn MutableCvsFile über unnötige leere Spalten rechts am Ende stolpert
