- fix #150 (accept mandate signature date in old DIN style) - fix #149 (Trim data values for more reliable UMR matching) - improve #127 (more helpful error messages) - fix #133 (Sensible default output file name) - fix #134 (Use last-viewed folder as default location in file open/save boxes) - comments from mandate file are added to the output file - SKGB-offline 0.5
git-svn-id: svn+ssh://cat/usr/local/svnreps/skgb/skgb-offline/trunk@820 31b05262-34a9-4923-903e-e8e313387d9b

--- a/TODO
+++ b/TODO
@@ -1,19 +1,15 @@
-﻿- properties
-- speicherort
-- falls nicht existent, lokaler pfad im selben ordner
+﻿- properties speicherort: falls nicht existent, lokaler pfad im selben ordner
 - mac-gui, menü, v. a. close
 - about-box (evtl. über klick auf stander auch in windows?)
 - bundle
 - kann aufs bundle verzichtet und alle details ins jar eingebaut werden?
 - app icon mac
 - doku
-+ default-pfad für mandatsstore etc.
 - MandateStore-konstruktor überarbieten, insb. parsen der signature
 - polishing, allgemein
 
 - weg finden, die pruefsumme "einfach" zu erzeugen (modifier-klick waere vielleicht gut)
   derzeit: ausgabe auf stdout im constructor
-- hilfreichere infos bei fehlern
 - gutes error-handling (möglichkeit, fehler in der eingabedatei, leeren feldern, fehlenden mandaten etc zu überspringen o. ä.?)
 
 KNOWN BUGS:
