--- a/TODO
+++ b/TODO
@@ -14,3 +14,5 @@
 
 KNOWN BUGS:
 - "key doppelt vorhanden", wenn MutableCvsFile über unnötige leere Spalten rechts am Ende stolpert
+
+changes 0.5 -> 0.5.1: only docs and refactoring
